--- a/spring-boot-microservices-new/inventory-service/src/main/resources/application.properties
+++ b/spring-boot-microservices-new/inventory-service/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/inventory-service
-spring.datasource.username=root
-spring.datasource.password=welcome123
+spring.datasource.username=shrikar
+spring.datasource.password=Mukesh@123
 spring.jpa.hibernate.ddl-auto=create-drop
-server.port=9091
+server.port=7001
 eureka.client.serviceUrl.defaultZone=http://eureka:password@localhost:8761/eureka
 spring.application.name=inventory-service
 spring.zipkin.base-url=http://localhost:9411
