--- a/spring-boot-microservices-new/order-service/src/main/resources/application.properties
+++ b/spring-boot-microservices-new/order-service/src/main/resources/application.properties
@@ -1,10 +1,10 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/order-service
-spring.datasource.username=root
-spring.datasource.password=welcome123
+spring.datasource.username=shrikar
+spring.datasource.password=Mukesh@123
 spring.jpa.hibernate.ddl-auto=update
 
-server.port=9092
+server.port=7003
 eureka.client.serviceUrl.defaultZone=http://eureka:password@localhost:8761/eureka
 spring.application.name=order-service
 
