--- a/spring-boot-microservices-new/pom.xml
+++ b/spring-boot-microservices-new/pom.xml
@@ -8,10 +8,10 @@
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
         <version>2.6.6</version>
-        <relativePath/> <!-- lookup parent from repository -->
+        <relativePath/>
     </parent>
 
-    <groupId>com.programming.techie</groupId>
+    <groupId>com.shrikar.techie</groupId>
     <artifactId>microservices-new</artifactId>
     <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
