Done with Kafka Integration

--- a/spring-boot-microservices-new/order-service/src/main/resources/application.properties
+++ b/spring-boot-microservices-new/order-service/src/main/resources/application.properties
@@ -30,6 +30,12 @@ resilience4j.retry.instances.inventory.max-attempts=3
 resilience4j.retry.instances.inventory.wait-duration=5s
 
 #Spring Cloud Stream Kafka Properties
+spring.kafka.bootstrap-servers=localhost:9092
+spring.kafka.template.default-topic=notification-topic
+spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
+spring.kafka.producer.properties.spring.json.type.mapping=event:com.orderservice.event.OrderPlacedEvent
+
 #spring.cloud.stream.output-bindings=notificationEventSupplier
 #spring.cloud.stream.bindings.notificationEventSupplier-out-0.destination=notification-events
 #spring.sleuth.integration.enabled=true
